<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PadFragment">

    <com.nex3z.flowlayout.FlowLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flChildSpacing="auto"
            app:flChildSpacingForLastRow="align"
            app:flRowSpacing="8dp" android:id="@+id/flowLayout">
        <androidx.appcompat.widget.AppCompatButton android:id="@+id/pad_btn1" android:layout_width="wrap_content"
                                                   android:layout_height="64sp" android:text="@string/pad_btn_1"/>
        <androidx.appcompat.widget.AppCompatButton android:id="@+id/pad_btn2" android:layout_width="wrap_content"
                                                   android:layout_height="64sp" android:text="@string/pad_btn_2"/>
        <androidx.appcompat.widget.AppCompatButton android:id="@+id/pad_btn3" android:layout_width="wrap_content"
                                                   android:layout_height="64sp" android:text="@string/pad_btn_3"/>
        <androidx.appcompat.widget.AppCompatButton android:id="@+id/pad_btn4" android:layout_width="wrap_content"
                                                   android:layout_height="64sp" android:text="@string/pad_btn_4"/>
        <androidx.appcompat.widget.AppCompatButton android:id="@+id/pad_btn5" android:layout_width="wrap_content"
                                                   android:layout_height="64sp" android:text="@string/pad_btn_5"/>
        <androidx.appcompat.widget.AppCompatButton android:id="@+id/pad_btn6" android:layout_width="wrap_content"
                                                   android:layout_height="64sp" android:text="@string/pad_btn_6"/>
        <androidx.appcompat.widget.AppCompatButton android:id="@+id/pad_btn7" android:layout_width="wrap_content"
                                                   android:layout_height="64sp" android:text="@string/pad_btn_7"/>
        <androidx.appcompat.widget.AppCompatButton android:id="@+id/pad_btn8" android:layout_width="wrap_content"
                                                   android:layout_height="64sp" android:text="@string/pad_btn_8"/>
        <androidx.appcompat.widget.AppCompatButton android:id="@+id/pad_btn9" android:layout_width="wrap_content"
                                                   android:layout_height="64sp" android:text="@string/pad_btn_9"/>
        <androidx.appcompat.widget.AppCompatButton android:id="@+id/pad_btn10" android:layout_width="wrap_content"
                                                   android:layout_height="64sp" android:text="@string/pad_btn_10"/>
        <androidx.appcompat.widget.AppCompatButton android:id="@+id/pad_btn11" android:layout_width="wrap_content"
                                                   android:layout_height="64sp" android:text="@string/pad_btn_11"/>
        <androidx.appcompat.widget.AppCompatButton android:id="@+id/pad_btn12" android:layout_width="wrap_content"
                                                   android:layout_height="64sp" android:text="@string/pad_btn_12"/>
        <androidx.appcompat.widget.AppCompatButton android:id="@+id/pad_btn13" android:layout_width="wrap_content"
                                                   android:layout_height="64sp" android:text="@string/pad_btn_13"/>
        <androidx.appcompat.widget.AppCompatButton android:id="@+id/pad_btn14" android:layout_width="wrap_content"
                                                   android:layout_height="64sp" android:text="@string/pad_btn_14"/>
        <androidx.appcompat.widget.AppCompatButton android:id="@+id/pad_btn15" android:layout_width="wrap_content"
                                                   android:layout_height="64sp" android:text="@string/pad_btn_15"/>
        <androidx.appcompat.widget.AppCompatButton android:id="@+id/pad_btn16" android:layout_width="wrap_content"
                                                   android:layout_height="64sp" android:text="@string/pad_btn_16"/>
    </com.nex3z.flowlayout.FlowLayout>


    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"/>


    <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginBottom="8dp">
            <androidx.appcompat.widget.AppCompatTextView android:layout_width="32dp"
                                                         android:layout_height="wrap_content"
                                                         android:text="@string/pad_seekbar_1"
                                                         android:labelFor="@id/pad_seekbar1"
                                                         android:textAlignment="center"/>
            <androidx.appcompat.widget.AppCompatSeekBar android:id="@+id/pad_seekbar1"
                                                        android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:layout_weight="1" android:max="127"/>
            <androidx.appcompat.widget.AppCompatTextView android:id="@+id/pad_seekbar_value_textview1"
                                                         android:layout_width="32dp"
                                                         android:layout_height="wrap_content"
                                                         android:textAlignment="center"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginBottom="8dp">
            <androidx.appcompat.widget.AppCompatTextView android:layout_width="32dp"
                                                         android:layout_height="wrap_content"
                                                         android:text="@string/pad_seekbar_2"
                                                         android:labelFor="@id/pad_seekbar2"
                                                         android:textAlignment="center"/>
            <androidx.appcompat.widget.AppCompatSeekBar android:id="@+id/pad_seekbar2"
                                                        android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:layout_weight="1" android:max="127"/>
            <androidx.appcompat.widget.AppCompatTextView android:id="@+id/pad_seekbar_value_textview2"
                                                         android:layout_width="32dp"
                                                         android:layout_height="wrap_content"
                                                         android:textAlignment="center"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginBottom="8dp">
            <androidx.appcompat.widget.AppCompatTextView android:layout_width="32dp"
                                                         android:layout_height="wrap_content"
                                                         android:text="@string/pad_seekbar_3"
                                                         android:labelFor="@id/pad_seekbar3"
                                                         android:textAlignment="center"/>
            <androidx.appcompat.widget.AppCompatSeekBar android:id="@+id/pad_seekbar3"
                                                        android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:layout_weight="1" android:max="127"/>
            <androidx.appcompat.widget.AppCompatTextView android:id="@+id/pad_seekbar_value_textview3"
                                                         android:layout_width="32dp"
                                                         android:layout_height="wrap_content"
                                                         android:textAlignment="center"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginBottom="8dp">
            <androidx.appcompat.widget.AppCompatTextView android:layout_width="32dp"
                                                         android:layout_height="wrap_content"
                                                         android:text="@string/pad_seekbar_4"
                                                         android:labelFor="@id/pad_seekbar4"
                                                         android:textAlignment="center"/>
            <androidx.appcompat.widget.AppCompatSeekBar android:id="@+id/pad_seekbar4"
                                                        android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:layout_weight="1" android:max="127"/>
            <androidx.appcompat.widget.AppCompatTextView android:id="@+id/pad_seekbar_value_textview4"
                                                         android:layout_width="32dp"
                                                         android:layout_height="wrap_content"
                                                         android:textAlignment="center"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginBottom="8dp">
            <androidx.appcompat.widget.AppCompatTextView android:layout_width="32dp"
                                                         android:layout_height="wrap_content"
                                                         android:text="@string/pad_seekbar_5"
                                                         android:labelFor="@id/pad_seekbar5"
                                                         android:textAlignment="center"/>
            <androidx.appcompat.widget.AppCompatSeekBar android:id="@+id/pad_seekbar5"
                                                        android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:layout_weight="1" android:max="127"/>
            <androidx.appcompat.widget.AppCompatTextView android:id="@+id/pad_seekbar_value_textview5"
                                                         android:layout_width="32dp"
                                                         android:layout_height="wrap_content"
                                                         android:textAlignment="center"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginBottom="8dp">
            <androidx.appcompat.widget.AppCompatTextView android:layout_width="32dp"
                                                         android:layout_height="wrap_content"
                                                         android:text="@string/pad_seekbar_6"
                                                         android:labelFor="@id/pad_seekbar6"
                                                         android:textAlignment="center"/>
            <androidx.appcompat.widget.AppCompatSeekBar android:id="@+id/pad_seekbar6"
                                                        android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:layout_weight="1" android:max="127"/>
            <androidx.appcompat.widget.AppCompatTextView android:id="@+id/pad_seekbar_value_textview6"
                                                         android:layout_width="32dp"
                                                         android:layout_height="wrap_content"
                                                         android:textAlignment="center"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginBottom="8dp">
            <androidx.appcompat.widget.AppCompatTextView android:layout_width="32dp"
                                                         android:layout_height="wrap_content"
                                                         android:text="@string/pad_seekbar_7"
                                                         android:labelFor="@id/pad_seekbar7"
                                                         android:textAlignment="center"/>
            <androidx.appcompat.widget.AppCompatSeekBar android:id="@+id/pad_seekbar7"
                                                        android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:layout_weight="1" android:max="127"/>
            <androidx.appcompat.widget.AppCompatTextView android:id="@+id/pad_seekbar_value_textview7"
                                                         android:layout_width="32dp"
                                                         android:layout_height="wrap_content"
                                                         android:textAlignment="center"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginBottom="8dp">
            <androidx.appcompat.widget.AppCompatTextView android:layout_width="32dp"
                                                         android:layout_height="wrap_content"
                                                         android:text="@string/pad_seekbar_8"
                                                         android:labelFor="@id/pad_seekbar8"
                                                         android:textAlignment="center"/>
            <androidx.appcompat.widget.AppCompatSeekBar android:id="@+id/pad_seekbar8"
                                                        android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:layout_weight="1" android:max="127"/>
            <androidx.appcompat.widget.AppCompatTextView android:id="@+id/pad_seekbar_value_textview8"
                                                         android:layout_width="32dp"
                                                         android:layout_height="wrap_content"
                                                         android:textAlignment="center"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
